# rust_skeleton

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: integrations.rs
